Changed to dark mode and fixed package mess

--- a/client/dep_web/src/App.css
+++ b/client/dep_web/src/App.css
@@ -8,14 +8,17 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  background-color: var(--bg-tonal-a0);
 }
 
 .header {
-  background-color: gainsboro;
+  background-color: var(--bg-tonal-a10);
   /* color: white; */
   text-align: center;
   top: 0;
   width: 100%;
+
+  border-bottom: 1px solid var(--bg-color-a50);
   /* position: fixed; */
 }
 
@@ -32,7 +35,8 @@
   /* flex-grow: 1; */
 }
 
-.left-side, .right-side {
+.left-side,
+.right-side {
   width: 50%;
   padding: 20px;
   box-sizing: border-box;
@@ -41,38 +45,46 @@
 }
 
 .left-side {
-  border-right: 1px solid gray;
+  border-right: 1px solid var(--bg-color-a50);
 }
 
-.text-area {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  border: 2px solid gray;
-  border-radius: 5px;
-  resize: none;
-  font-size: 1em;
+.border {
+  /* width: auto; */
+  /* height: auto; */
+  flex: 1;
+
+  border-radius: 1em;
+  border: 1px solid var(--bg-color-a50);
+  overflow: hidden;
 }
 
 /* scrollbar stuff */
 
 ::-webkit-scrollbar {
-  width: 10px;   /* Vertical scrollbar width */
-  height: 10px;  /* Horizontal scrollbar height */
+  width: 5px;
+  /* Vertical scrollbar width */
+  height: 5px;
+  /* Horizontal scrollbar height */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(128, 128, 128);  /* Scroll thumb color */
-  border-radius: 10px; /* Capsule shape */
-  border: 2px solid white; /* Inner line effect */
+  background: var(--bg-tonal-a20);
+  /* Scroll thumb color */
+  border-radius: 10px;
+  /* Capsule shape */
+  /* border: 2px solid white; */
+  /* Inner line effect */
 }
 
 ::-webkit-scrollbar-track {
-  background: #f0f0f0; /* Track color */
-  border-radius: 10px; /* Round track edges */
+  background: var(--bg-color-a10);
+  /* Track color */
+  border-radius: 10px;
+  /* Round track edges */
   /* width: 2px; */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(100, 100, 100); /* Darker grey on hover */
+  background: rgb(100, 100, 100);
+  /* Darker grey on hover */
 }
